# 15418FinalProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  USAGE.md  index.md  input.txt  output.txt  pinatrace.out
docs/: _config.yml  index.markdown
docs/_posts/: 2022-05-04-welcome-to-jekyll.markdown
midfile/: output copy.txt
pin-3.22-98547-g7a303a835-gcc-linux/source/tools/ManualExamples/: a.out  inscount.out  pinatrace.cpp  roitrace.csv  selfInstrumented.cpp  test.cpp
pin-3.22-98547-g7a303a835-gcc-linux/source/tools/MemTrace/: a.out
sampleoutput/: thread64.out
samples/: README.md  simple_64thread_interleave_access.cpp  simple_malloc_pinatrace.out  simple_malloc_program.cpp  simple_parallel_pinatrace.out  simple_parallel_program.cpp
src/: cache.cpp  cache.h  cacheline.h  consts.h  main.cpp  msi.h
test/: test.cpp
